# compiler

./: .gitignore  .gitmodules  README.md  devbox.json  justfile  meson.build  prompt.txt
.github/workflows/: ci.yml
data/: builtins.csv  types.csv
docs/: concepts-vs-primitives.md  generics.md  helios-bridge.md
grammar/: ast.hpp  lexer.hpp  lexer.re  main.cpp  parser.y
parser/: Zane.g4
runtime/: zane_runtime.c
scripts/: check_parser.sh  embed_text.py  generate_parser.sh  llvm_runtime_probe.py
src/: main.cpp
src/ast/: ast_helpers.hpp  fwd.hpp  logic.hpp  node_list.def  nodes.hpp  symbol_collector.hpp  visitor.hpp
src/cli/: cli.hpp  commands.hpp  help.hpp  template.hpp
src/codegen/: llvm.hpp  type_mapper.hpp  visitor.hpp
src/compiler/: compiler.hpp  compiler_build.cpp  compiler_dependencies.cpp  helios_symbols.hpp  intrinsics.cpp  intrinsics.hpp
src/grammar/: lexer.hpp  lexer.re  parser.y
src/helios/: helios.hpp
src/ir/: node.hpp  nodes.cpp  nodes.hpp  visitor.hpp
src/package/: package.cpp  package.hpp  package_cache.cpp  package_codegen.cpp  package_parse.cpp  parser_context.cpp  parser_context.hpp
src/semantic/: metadata.cpp  metadata.hpp
src/types/: stack.hpp  variant.hpp
src/utils/: types.hpp
test/: main.ast.json  main.zn  zane.coda
test-parser/: main.ast.json
test/.dev/linux-x64/: Test  test
test/src/: main.zn
